hphp/hack/test/typecheck/as_expression/invalid_hint_void.php.exp
File "invalid_hint_void.php", line 5, characters 3-13:
  err
File "invalid_hint_void.php", line 4, characters 9-12:
You can only use the `void` type as the return type of a function or method (Naming[2063])
